--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,15 @@
       <version>3.0.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.60</version>
+    </dependency>
+
+
+
     <!--
 
         <dependency>
