--- a/pom.xml
+++ b/pom.xml
@@ -49,16 +49,6 @@
       </exclusions>-->
     </dependency>
 
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-<!--      <exclusions>
-        <exclusion>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-logging</artifactId>
-        </exclusion>
-      </exclusions>-->
-    </dependency>
 
 
     <dependency>
@@ -72,58 +62,15 @@
       <scope>test</scope>
     </dependency>
 
-        <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <scope>runtime</scope>
-        </dependency>
-
-
-
     <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>1.3.1</version>
-
-      <exclusions>
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-aop</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-beans</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-context</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-core</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-expression</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-tx</artifactId>-->
-<!--        </exclusion>-->
-        <exclusion>
-          <groupId>org.yaml</groupId>
-          <artifactId>snakeyaml</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.4.2</version>
     </dependency>
 
 
-    <dependency>
-      <groupId>tk.mybatis</groupId>
-      <artifactId>mapper-spring-boot-starter</artifactId>
-      <version>2.1.5</version>
-    </dependency>
-    <dependency>
+
+      <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
@@ -180,15 +127,19 @@
 
 
 
-    <!--
 
-        <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-log4j</artifactId>
-          <version>1.3.8.RELEASE</version>
-        </dependency>
-    -->
 
+<!--    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>-->
+
+<!--
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+    </dependency>
+-->
 
 
   </dependencies>
