--- a/project-controller/pom.xml
+++ b/project-controller/pom.xml
@@ -11,11 +11,11 @@
   </parent>
 
   <groupId>com.ij34.controller</groupId>
-  <artifactId>yss-controller</artifactId>
+  <artifactId>project-controller</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>yss-controller Maven Webapp</name>
+  <name>project-controller Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -28,9 +28,15 @@
   <dependencies>
     <dependency>
       <groupId>com.ij34.service</groupId>
-      <artifactId>yss-service</artifactId>
+      <artifactId>project-service</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+      <dependency>
+          <groupId>com.ij34.model</groupId>
+          <artifactId>project-model</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
