--- a/project-dao/pom.xml
+++ b/project-dao/pom.xml
@@ -9,11 +9,11 @@
   <version>1.0-SNAPSHOT</version>
 </parent>
   <groupId>com.ij34.dao</groupId>
-  <artifactId>yss-dao</artifactId>
+  <artifactId>project-dao</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>yss-dao Maven Webapp</name>
+  <name>project-dao Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -26,9 +26,10 @@
   <dependencies>
     <dependency>
       <groupId>com.ij34.model</groupId>
-      <artifactId>yss-model</artifactId>
+      <artifactId>project-model</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
 
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.boot</groupId>-->
