--- a/project-global/pom.xml
+++ b/project-global/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.ij34.global</groupId>
-  <artifactId>yss-global</artifactId>
+  <artifactId>project-global</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>yss-global Maven Webapp</name>
+  <name>project-global Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
