--- a/project-model/pom.xml
+++ b/project-model/pom.xml
@@ -11,12 +11,12 @@
   </parent>
 
   <groupId>com.ij34.model</groupId>
-  <artifactId>yss-model</artifactId>
+  <artifactId>project-model</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
 
-  <name>yss-model Maven Webapp</name>
+  <name>project-model Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
