--- a/project-service/pom.xml
+++ b/project-service/pom.xml
@@ -12,11 +12,11 @@
 
 
   <groupId>com.ij34.service</groupId>
-  <artifactId>yss-service</artifactId>
+  <artifactId>project-service</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>yss-service Maven Webapp</name>
+  <name>project-service Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -29,11 +29,15 @@
   <dependencies>
     <dependency>
       <groupId>com.ij34.dao</groupId>
-      <artifactId>yss-dao</artifactId>
+      <artifactId>project-dao</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>com.ij34.model</groupId>
+      <artifactId>project-model</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
 
 
   </dependencies>
