--- a/pom.xml
+++ b/pom.xml
@@ -124,22 +124,18 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.60</version>
     </dependency>
-
-
-
-
-
-<!--    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-log4j2</artifactId>
-    </dependency>-->
-
-<!--
+    <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
     <dependency>
-      <groupId>com.fasterxml.jackson.dataformat</groupId>
-      <artifactId>jackson-dataformat-yaml</artifactId>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.7.0</version>
     </dependency>
--->
+    <!-- https://mvnrepository.com/artifact/org.crazycake/shiro-redis -->
+    <dependency>
+      <groupId>org.crazycake</groupId>
+      <artifactId>shiro-redis</artifactId>
+      <version>3.3.1</version>
+    </dependency>
 
 
   </dependencies>
