--- a/project-controller/src/main/resources/application.yml
+++ b/project-controller/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/testdb?serverTimezone=Asia/Shanghai&useUnicode=true&useSSL=false&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3306/shiro?serverTimezone=Asia/Shanghai&useUnicode=true&useSSL=false&characterEncoding=UTF-8
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
@@ -20,4 +20,21 @@ spring:
 #    testOnReturn: false
 #
 redis:
-  config‐location: classpath:/redisson-config.yml
+  address: "127.0.0.1:6379"
+  password: null
+  clientName: null
+  database: 0 #选择使用哪个数据库0~15
+  idleConnectionTimeout: 10000
+  pingTimeout: 1000
+  connectTimeout: 10000
+  timeout: 3000
+  retryAttempts: 3
+  retryInterval: 1500
+  reconnectionTimeout: 3000
+  failedAttempts: 3
+  subscriptionsPerConnection: 5
+  subscriptionConnectionMinimumIdleSize: 1
+  subscriptionConnectionPoolSize: 50
+  connectionMinimumIdleSize: 32
+  connectionPoolSize: 64
+  dnsMonitoringInterval: 5000
