--- a/pom.xml
+++ b/pom.xml
@@ -49,16 +49,16 @@
       </exclusions>-->
     </dependency>
 
-    <dependency>
+<!--    <dependency>
       <groupId>org.mybatis.spring.boot</groupId>
       <artifactId>mybatis-spring-boot-starter</artifactId>
-<!--      <exclusions>
+&lt;!&ndash;      <exclusions>
         <exclusion>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-logging</artifactId>
         </exclusion>
-      </exclusions>-->
-    </dependency>
+      </exclusions>&ndash;&gt;
+    </dependency>-->
 
 
     <dependency>
@@ -72,53 +72,55 @@
       <scope>test</scope>
     </dependency>
 
+<!--
         <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
           <scope>runtime</scope>
         </dependency>
+-->
 
 
 
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>1.3.1</version>
+<!--    <dependency>-->
+<!--      <groupId>org.mybatis.spring.boot</groupId>-->
+<!--      <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--      <version>1.3.1</version>-->
 
-      <exclusions>
+<!--      <exclusions>-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-aop</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-beans</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-context</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-core</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-expression</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;        <exclusion>&ndash;&gt;-->
+<!--&lt;!&ndash;          <groupId>org.springframework</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;          <artifactId>spring-tx</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;        </exclusion>&ndash;&gt;-->
 <!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-aop</artifactId>-->
+<!--          <groupId>org.yaml</groupId>-->
+<!--          <artifactId>snakeyaml</artifactId>-->
 <!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-beans</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-context</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-core</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-expression</artifactId>-->
-<!--        </exclusion>-->
-<!--        <exclusion>-->
-<!--          <groupId>org.springframework</groupId>-->
-<!--          <artifactId>spring-tx</artifactId>-->
-<!--        </exclusion>-->
-        <exclusion>
-          <groupId>org.yaml</groupId>
-          <artifactId>snakeyaml</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+<!--      </exclusions>-->
+<!--    </dependency>-->
 
 
-    <dependency>
+<!--    <dependency>
       <groupId>tk.mybatis</groupId>
       <artifactId>mapper-spring-boot-starter</artifactId>
       <version>2.1.5</version>
@@ -127,7 +129,7 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -146,11 +148,11 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.alibaba/druid-spring-boot-starter -->
-    <dependency>
+<!--    <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid-spring-boot-starter</artifactId>
       <version>1.2.3</version>
-    </dependency>
+    </dependency>-->
 
     <dependency>
       <groupId>javax.jms</groupId>
@@ -158,12 +160,12 @@
       <version>2.0.1</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter -->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter &ndash;&gt;
     <dependency>
       <groupId>org.redisson</groupId>
       <artifactId>redisson-spring-boot-starter</artifactId>
       <version>3.15.4</version>
-    </dependency>
+    </dependency>-->
 
     <dependency>
       <groupId>io.springfox</groupId>
@@ -189,6 +191,10 @@
         </dependency>
     -->
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
 
 
   </dependencies>
