--- a/project-controller/src/main/resources/application.yml
+++ b/project-controller/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8080
-spring:
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/testdb?serverTimezone=Asia/Shanghai&useUnicode=true&useSSL=false&characterEncoding=UTF-8
-    username: root
-    password: 123456
-    type: com.alibaba.druid.pool.DruidDataSource
+#spring:
+#  datasource:
+#    url: jdbc:mysql://127.0.0.1:3306/testdb?serverTimezone=Asia/Shanghai&useUnicode=true&useSSL=false&characterEncoding=UTF-8
+#    username: root
+#    password: 123456
+#    type: com.alibaba.druid.pool.DruidDataSource
 
 
 #    initialSize: 5
@@ -19,8 +19,8 @@ spring:
 #    testOnBorrow: false
 #    testOnReturn: false
 
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
-  config‐location: classpath:mybatis/mybatisConfig.xml
+#mybatis:
+#  mapper-locations: classpath*:mapper/*.xml
+#  config‐location: classpath:mybatis/mybatisConfig.xml
 #redis:
 #  config‐location: classpath:/redisson-config.yml
